2014-06-24  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_extensions.php, index.php: force to load the
	new integrated update manager and don't load the old update manager
	extension.

2014-06-24  Vanessa Gil <vanessa.gil@artica.es>

	* pandoradb.data.sql
	  pandoradb.data.oracle.sql
	  pandoradb.data.postgreSQL.sql
	  extras/pandoradb_migrate_5.0.x_to5.1.mysql.sql
	  extras/pandoradb_migrate_5.0.x_to5.1.oracle.sql
	  extras/pandoradb_migrate_5.0.x_to5.1.postgreSQL.sql: Delete
	custom SNMP task.

2014-06-24  Ramon Novoa  <rnovoa@artica.es>

	* godmode/agentes/module_manager_editor_common.php,
	  include/help/en/help_ff_interval.php,
	  include/help/en/help_ff_threshold.php,
	  include/help/en/help_ff_timeout.php,
	  include/help/es/help_ff_interval.php,
	  include/help/es/help_ff_threshold.php,
	  include/help/es/help_ff_timeout.php,
	  include/help/ja/help_ff_interval.php,
	  include/help/ja/help_ff_threshold.php,
	  include/help/ja/help_ff_timeout.php: Updated help files for the FF threshold.

2014-06-24  Junichi Satoh  <junichi@rworks.jp>

	* include/functions_api.php: Added support for 'each_ff' and
	'ff_timeout' to 'set add_*_module_policy'.

2014-06-24  Junichi Satoh  <junichi@rworks.jp>

	* include/functions_api.php: Added support for ff_threshold to
	'set new_local_component'. Fixed that component id can not be set
	correctly by 'set new_local_component'.

2014-06-23  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* extras/pandoradb_migrate_5.0.x_to_5.1.mysql.sql: Fixed
	some queries.

2014-06-23  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* godmode/gis_maps/configure_gis_map.php: Visual changes
	on the inputs.

2014-06-23  Vanessa Gil <vanessa.gil@artica.es>

	* include/languages/ar.mo
	  include/languages/ar.po
	  include/languages/ca.mo
	  include/languages/ca.po
 	  include/languages/cs.mo
	  include/languages/cs.po
	  include/languages/de.mo
	  include/languages/de.po
	  include/languages/el.mo